Test: Arrays -> List.of 변경